[package]
name = "upload_file"
version = "0.1.0"
authors = ["= <=>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.11", features = ["full"] }
tokio = { version = "1.9.0", features = ["full"] }
multer = "2.0.1"
rand = "0.8.4"